# freemocap_tools

./: .gitignore  README.md  RUN_ME.py  fmc2ue_import.py  freemocap_adapter.py  pyproject.toml
.github/workflows/: publish_to_pypi_on_version_bump.yml  publish_to_pypi_when_new_tag_is_pushed_to_main.yml
ajc27_freemocap_blender_addon/: __init__.py  ajc27_run_as_main.py  main.py  run_as_main.py
ajc27_freemocap_blender_addon/blender_interface/: __init__.py  main_view3d_panel.py  properties.py
ajc27_freemocap_blender_addon/core_functions/: __init__.py  main_controller.py
ajc27_freemocap_blender_addon/data_models/: data_references.py
ajc27_freemocap_blender_addon/freemocap_data_handler/: handler.py
ajc27_freemocap_blender_addon/system/: constants.py  install_self_to_blender.py
ajc27_freemocap_blender_addon/utilities/: install_dependencies.py
ajc_freemocap_blender_addon/: __init__.py  main.py
ajc_freemocap_blender_addon/core_functions/: main_controller.py
assets/: body_mesh.ply  readme.md
freemocap_adapter/: README.md  __init__.py  __main__.py  addon_interface.py  core_functions.py  data_definitions.py  freemocap_adapter.py  io_scene_fbx_functions_blender3.py  io_scene_fbx_functions_blender4.py  main.py
freemocap_adapter/assets/: skelly_lowpoly_mesh.fbx
freemocap_adapter/blender_interface/: __init__.py  main_view3d_panel.py  properties.py
freemocap_adapter/blender_user_interface/: __init__.py  properties.py  view3d_panel.py
freemocap_adapter/core_functions/: functions.py  main_controller.py
freemocap_adapter/data_definitions/: anthropomorphic_dimensions.py  bone_constraints.py  empties_dict.py  foot_locking_markers.py  ik_control_bones.py  ik_pole_bones.py  skelly_parts.py  virtual_bones.py
freemocap_adapter/data_models/: bone_constraints.py  default_config.json  empties_heirarchy.py  freemocap_data.py  virtual_bones.py
freemocap_adapter/system/: __init__.py  (+1 more)
freemocap_blender/: __init__.py  main.py
freemocap_video_export/: README.md  __init__.py  addon_interface.py  classes.py  config_variables.py  functions.py
freemocap_visualizer/: README.md  __init__.py  addon_interface.py  auxiliary_functions.py  data_definitions.py  functions.py
install_and_run_addon/: run_as_main.py
video_sync_script/: README.md  video_sync.py
(+490 files in other folders)
