[tool.poetry]
name = "ajc27_freemocap_blender_addon"
version = "0.2.15"
description = "A Blender Add-on for working with Freemocap Data (based on @ajc27's addon)"
authors = ["Skelly FreeMoCap <info@freemocap.org>"]
license = "AGPLv3"
readme = "README.md"
packages = [{ include = "ajc27_freemocap_blender_addon" }]

[tool.pofetry.dependencies]
python = ">=3.8,<3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

