[tool.poetry]
name = "ajc27_freemocap_blender_addon"
description = "A Blender Add-on for working with Freemocap Data (based on @ajc27's addon)"
authors = ["Skelly FreeMoCap <info@freemocap.org>"]
license = "AGPLv3"
readme = "README.md"
packages = [{ include = "ajc27_freemocap_blender_addon" }]

[tool.pofetry.dependencies]
python = ">=3.8,<3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bumpver]
current_version = "v2023.10.1011"

version_pattern = "vMAJOR.MINOR.PATCH[-TAG]"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = true
[tool.bumpver.file_patterns]
"ajc27_freemocap_blender_addon/__init__.py" = ["{version}"]